examples/test/testpolicy13307.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13307
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key25: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value26
          key7: value46
      podSelector:
        matchLabels:
          key20: value22
          key29: value30
